--- a/html/productos.html
+++ b/html/productos.html
@@ -91,7 +91,7 @@
             <!-- Card 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../Img/producto1.jpg" alt="Imagen de producto 1" class="card-img-top">
+                    <img src="../Img/escritorio laqueado.jfif" alt="Imagen de producto 1" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Producto 1</h5>
                         <p class="card-text">Descripción breve del producto 1.</p>
@@ -102,7 +102,7 @@
             <!-- Card 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../Img/producto2.jpg" alt="Imagen de producto 2" class="card-img-top">
+                    <img src="../Img/escritorio.jfif" alt="Imagen de producto 2" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Producto 2</h5>
                         <p class="card-text">Descripción breve del producto 2.</p>
@@ -113,7 +113,7 @@
             <!-- Card 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="../Img/producto3.jpg" alt="Imagen de producto 3" class="card-img-top">
+                    <img src="../Img/cocina.jfif" alt="Imagen de producto 3" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Producto 3</h5>
                         <p class="card-text">Descripción breve del producto 3.</p>
@@ -121,10 +121,10 @@
                     </div>
                 </div>
             </div>
-        <!-- Card 3 -->
+        <!-- Card 4 -->
         <div class="col-md-4">
             <div class="card">
-                <img src="../Img/producto3.jpg" alt="Imagen de producto 4" class="card-img-top">
+                <img src="../Img/armario y escritorio.jfif" alt="Imagen de producto 4" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Producto 4</h5>
                     <p class="card-text">Descripción breve del producto 4.</p>
@@ -132,10 +132,10 @@
                 </div>
             </div>
         </div>
-        <!-- Card 3 -->
+        <!-- Card 5 -->
         <div class="col-md-4">
             <div class="card">
-                <img src="../Img/producto3.jpg" alt="Imagen de producto 5" class="card-img-top">
+                <img src="../Img/mueble tv.jfif" alt="Imagen de producto 5" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Producto 5</h5>
                     <p class="card-text">Descripción breve del producto 5.</p>
@@ -143,10 +143,10 @@
                 </div>
             </div>
         </div>
-        <!-- Card 3 -->
+        <!-- Card 6 -->
         <div class="col-md-4">
             <div class="card">
-                <img src="../Img/producto3.jpg" alt="Imagen de producto 6" class="card-img-top">
+                <img src="../Img/vanitory.jfif" alt="Imagen de producto 6" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title">Producto 6</h5>
                     <p class="card-text">Descripción breve del producto 6.</p>
