--- a/html/quien-soy.html
+++ b/html/quien-soy.html
@@ -56,7 +56,7 @@
         
         <div class="container-fluid">
           <a class="navbar-brand" href="../Index.html">
-          <img src="../Img/1600w--rhgFVwQfMk.webp" alt="" width="90px">
+          <img src="../img/1600w--rhgFVwQfMk.webp" alt="" width="90px">
           </a>
          
           <section class="button-color">
