--- a/html/contacto.html
+++ b/html/contacto.html
@@ -55,7 +55,7 @@
     <nav  class="navbar navbar-expand-lg navbar-light bg-dark">
         
         <div class="container-fluid">
-          <a class="navbar-brand" href="../Index.html">
+          <a class="navbar-brand" href="../index.html">
           <img src="../img/1600w--rhgFVwQfMk.webp" alt="Logo" width="90px">
           </a>
          
