--- a/html/quien-soy.html
+++ b/html/quien-soy.html
@@ -49,7 +49,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../Index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img src="../img/1600w--rhgFVwQfMk.webp" alt="" width="90px">
                 </a>
 
