--- a/html/quien-soy.html
+++ b/html/quien-soy.html
@@ -101,13 +101,13 @@
 
     <footer class="footer">
         <div class="redes-sociales">
-            <img src="../Img/logo facebook.png" alt="" width="20">
+            <img src="../img/logo facebook.png" alt="" width="20">
             <a href="https://www.facebook.com" target="_blank" class="enlace-verde">facebook</a>
 
-            <img src="../Img/descarga.png" alt="" width="20px">
+            <img src="../img/descarga.png" alt="" width="20px">
             <a href="https://web.whatsapp.com/" target="_blank" class="enlace-verde">whatsapp</a>
 
-            <img src="../Img/1b2ca367caa7eff8b45c09ec09b44c16-logotipo-de-icono-de-instagram.webp" alt="" width="20">
+            <img src="../img/1b2ca367caa7eff8b45c09ec09b44c16-logotipo-de-icono-de-instagram.webp" alt="" width="20">
             <a href="https://www.instagram.com/" target="_blank" class="enlace-verde">instagram</a>
         </div>
         <p class="copyright">©️ D.L</p>
